--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div class="loginForm">
-        username: <input type="text" id="userInput"> password: <input type="password" id="userPassword"> <button id="loginButton">Login</button> 
+    <div class="loginForm" id="content">
+        
     </div>
     
 <script src="scrpit.js"></script>
