--- a/index.html
+++ b/index.html
@@ -15,19 +15,16 @@
     <div id="id01" class="modal">
         <span onclick="document.getElementById('id01').style.display='none'" class="close"
             title="Close Modal">&times;</span>
-        <form class="modal-content" action="/action_page.php">
+        <form class="modal-content">
             <div class="container">
                 <h1>Sign Up</h1>
                 <p>Please fill in this form to create an account.</p>
                 <hr>
                 <label for="studioName"><b>Studio Name</b></label>
-                <input type="text" placeholder="Enter Name" name="email" required>
+                <input type="text" id="studioName" placeholder="Enter Name" required>
 
                 <label for="psw"><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="psw" required>
-
-                <label for="psw-repeat"><b>Repeat Password</b></label>
-                <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+                <input type="password" id="newPassword" placeholder="Enter Password" required>
 
                 <label>
                     <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
@@ -38,13 +35,11 @@
                 <div class="clearfix">
                     <button type="button" onclick="document.getElementById('id01').style.display='none'"
                         class="cancelbtn">Cancel</button>
-                    <button type="submit" class="signupbtn">Sign Up</button>
+                    <button type="submit" id="registerButton">Sign Up</button>
                 </div>
             </div>
         </form>
     </div>
-    <button id="registerButton">Register</button>
-    <input type="password" id="studioPassword">
 
     <div class="loginForm" id="content"></div>
     <div id="movieList"></div>
