--- a/index.html
+++ b/index.html
@@ -10,53 +10,20 @@
 </head>
 
 <body>
-    <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Sign Up</button>
-
-    <div id="id01" class="modal">
-        <span onclick="document.getElementById('id01').style.display='none'" class="close"
-            title="Close Modal">&times;</span>
-        <form class="modal-content">
-            <div class="container">
-                <h1>Sign Up</h1>
-                <p>Please fill in this form to create an account.</p>
-                <hr>
-                <label for="studioName"><b>Studio Name</b></label>
-                <input type="text" id="studioName" placeholder="Enter Name" required>
-
-                <label for="psw"><b>Password</b></label>
-                <input type="password" id="newPassword" placeholder="Enter Password" required>
-
-                <label>
-                    <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-                </label>
-
-                <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-                <div class="clearfix">
-                    <button type="button" onclick="document.getElementById('id01').style.display='none'"
-                        class="cancelbtn">Cancel</button>
-                    <button type="submit" id="registerButton">Sign Up</button>
-                </div>
-            </div>
-        </form>
+    <div class="header-buttons">
+        <button id="signUp" style.display='block' style="width:auto;">Sign Up</button>
+        <button id="movieButton" style.display='block' style="width:auto;">Movies</button>
+        <button id="addTrivia" style.display='block' style="width:auto;">Trivia</button>
+        <button id="addMovie" style.display='block' style="width:auto;">new Movie</button>
     </div>
 
     <div class="loginForm" id="content"></div>
     <div id="movieList"></div>
+    <div id="login"></div>
+    <div id="mainDiv"></div>
 
     <script src="script.js"></script>
     <script src="apiScript.js"></script>
-    <script>
-        // Get the modal
-        var modal = document.getElementById('id01');
-
-        // When the user clicks anywhere outside of the modal, close it
-        window.onclick = function (event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
-        }
-    </script>
 </body>
 
 </html>
