--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <button id="signUp" style.display='block' style="width:auto;">Sign Up</button>
         <button id="movieButton" style.display='block' style="width:auto;">Movies</button>
         <button id="addTrivia" style.display='block' style="width:auto;">Trivia</button>
-        <button id="addMovie" style.display='block' style="width:auto;">new Movie</button>
+        <button id="addMovie" style.display='block' style="width:auto;">Add Movie</button>
+        <button id="returnMovie" style.display='block' style="width:auto;">Return Movie</button>
     </div>
 
     <div class="loginForm" id="content"></div>
@@ -23,7 +24,6 @@
     <div id="mainDiv"></div>
 
     <script src="script.js"></script>
-    <script src="apiScript.js"></script>
 </body>
 
 </html>
